# csv-sentiment

./: pyproject.toml
csv_sentiment/: main.py
