[tool.poetry]
name = "csv-sentiment"
version = "0.1.0"
description = ""
authors = ["Darshan Kothari <dkothari777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
transformers = "^4.52.1"
pandas = "^2.2.3"
tqdm = "^4.67.1"
scipy = "^1.15.2"
click = "^8.1.8"

[tool.poetry.scripts]
csv-sentiment = "csv_sentiment.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
